<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/order_list_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTitle"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">


        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/order_footer_image_text_layout"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />

            <RelativeLayout
                android:id="@+id/rlSpinner"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/spType">
                <TextView
                    android:id="@+id/txtClientList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/editarClient"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <Spinner
                    android:id="@+id/spClientList"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@+id/txtClientList"
                    />
                <TextView
                    android:id="@+id/txtContactList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editarContact"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_below="@+id/spClientList"/>
                <Spinner
                    android:id="@+id/spContactList"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/txtContactList"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <LinearLayout
                    android:id="@+id/llClientContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:weightSum="4"
                    android:layout_below="@+id/spContactList">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nameClientID"/>
                    <Spinner
                        android:id="@+id/spClientContact"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/spContactList"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/rlSpinner">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nameClient"/>
                <EditText
                    android:id="@+id/etName"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nameClient"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llName">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"/>
                <EditText
                    android:id="@+id/etHome"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/home"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llAddress">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/postal_ode"/>
                <EditText
                    android:id="@+id/etPostalCode"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/postal_ode"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llPostalCode">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/poblacion"/>
                <EditText
                    android:id="@+id/etDistrict"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/poblacion"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llDistrict">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llPhone">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_below="@+id/etPhone"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="2"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>