<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailContactActivity">

    <RelativeLayout
        android:id="@+id/order_list_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/order_footer_image_text_layout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Empresa: "/>
                <EditText
                    android:id="@+id/etClient"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:focusable="false"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llClient">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nameClient"/>
                <EditText
                    android:id="@+id/etName"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/nameClient"
                    android:inputType="textPersonName"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llName">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"/>
                <EditText
                    android:id="@+id/etPhone"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/phone"
                    android:inputType="number"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:layout_below="@+id/llPhone">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_below="@+id/etPhone"/>

            </LinearLayout>





        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>